Refactor: AssertJ best practices by @timtebeek